# partyapp

./: 0010.DESIGN.md  0020.SETUP_HOST.md  0030.TUTORIAL.md  0040.MODEL.md  cli.py  config.py  create_tables.py  pyproject.toml  requirements.txt
db/: base.py
db/models/: __init__.py  associations.py  category.py  enums.py  law.py  party.py
partyapp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
seeds/: Category.csv  Party.csv
